# should

./: .gitignore  .ruff.toml  CONTRIBUTORS.md  README.md  manifest.py  mpm.json  package.json  pyproject.toml  pyrightconfig.json
.gemini/: GEMINI.md  config.yaml  settings.json
.github/: CODEOWNERS  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/workflows/: ci.yaml
scripts/: install  install.sh  tests  tests.sh
should/: __init__.py  _assert.py  _should.py  _throw.py  _util.py  _wrapper.py
tests/unit/: should_item_test.py  should_test.py  throw_test.py
