[project]
name = "should"
version = "0.4.0"
description = "Assertion lib for micro:Pytest and MicroPython."
authors = []
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
  "ruff (>=0.15.10,<0.16.0)",
  "pyright (>=1.1.408,<2.0.0)",
  "mpremote (>=1.27.0,<2.0.0)"
]

[tool.poetry]
package-mode = false
