[project]
name = "should"
version = "0.4.0"
description = "Assertion lib for micro:Pytest and MicroPython."
authors = []
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
  "mpremote (>=1.27.0,<2.0.0)",
  "pyright (>=1.1.409,<2.0.0)",
  "ruff (>=0.15.12,<1.0.0)",
]

[tool.poetry]
package-mode = false
